Add functionality to see current max and min prices